MAT-193: Fix alignment issue

--- a/src/components/CheckoutFunnel/PersonalInformation/PersonalInformation.module.scss
+++ b/src/components/CheckoutFunnel/PersonalInformation/PersonalInformation.module.scss
@@ -149,6 +149,10 @@
         "logged-in log-out"
         "user-name user-name"
         "user-email user-email";
+
+      .loginHint {
+        text-align: left;
+      }
     }
 
     .contactInfoRow {
